fixed page overflow issues in mobile mode

--- a/src/Components/MainPageComps/Styles/Footer.css
+++ b/src/Components/MainPageComps/Styles/Footer.css
@@ -5,7 +5,8 @@
   position: absolute;
   bottom: -15px;
   height: 220px;
-  width: 100%;
+  max-width: 100%;
+  margin-left: 12px;
   background-color: black;
   color: "white";
 }
