--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 body {
-  overflow-x: hidden !important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -9,11 +8,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   position: relative;
   min-height: 100vh;
-}
-@media only screen and (max-width: 768px) {
-  html {
-    overflow-x: hidden !important;
-  }
 }
 
 code {
